# KLEYNER

./: AGENTS.md  CMakeLists.txt  README.md  build.bat  build.sh  cleaner
configs/: basic.cfg
media/: art.txt
scripts/: build_nix.sh  build_win.bat
src/: cleaner.cpp  cleaner.h  config.cpp  config.h  logger.cpp  logger.h  main.cpp  platform_nix.cpp  platform_win.cpp  scanner.cpp  scanner.h  ui.cpp  ui.h  utils.cpp  utils.h
src/legacy/: cleaner.h  logger.h  utils.cpp  utils.h
tests/: scanner_tests.cpp
